Fixed issue where profile image was distorting when resizing the window. Updated README file as well.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,7 @@ a:visited {
   color: aqua;
 }
 
+/* Hover on desktop only */
 @media screen and (min-width: 1024px) {
   a:hover {
     text-decoration: line-through;
@@ -135,7 +136,9 @@ header {
 
 .content {
   padding: 0 18px;
+  /* set padding to zero if collapsible is open by default */
   max-height: 0;
+  /* set max-height to full if collapsible is open by default */
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
@@ -146,13 +149,15 @@ header {
   text-align: left;
   font-family: monospace;
   display: flex;
+  align-items: center;
+  max-height: 100%;
   gap: 1.5rem;
 }
 
 .profile {
   border-radius: 10px;
   width: 20%;
-  max-width: 100%;
+  height: 100%;
   flex: 1;
 }
 
@@ -205,7 +210,6 @@ figure {
   .desktop-hide {
     display: none;
   }
-
 }
 
 /* MOBILE */
